[package]
name = "gle"
version = "0.1.0"
edition = "2021"
description = "A engine base OpenGL."
repository = "https://github.com/Anglebase/OpenGL-Engine.git"
license = "LGPL-2.1"

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
constcat = "0.6.0"
gl = "0.14.0"
glfw = "0.59.0"
gom = "0.1.6"
lazy_static = "1.5.0"
